# swdrModis

./: CMakeLists.txt  README.md  build.sh  build_v2.sh  build_v3.sh  build_v4.sh  install.sh  install_v2.sh
config/: ahi_swdr_v3_rural_FY-3D.cfg
data/output/: FY3D_MERSI_20220728_0400_all_elements.tif
include/: ahi_swdr.h  batch_run.h  file_io.h  parse_cmd_vars.h  read_config_file.h
src/: ahi_swdr.cpp  batch_run.cpp  file_io.cpp  main.cpp  parse_cmd_vars.cpp  readRaster.hpp  read_config_file.cpp  writeRaster.hpp
